--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="imagens.js"></script>
     <script src="Ator.js"></script>
     <script src="carro.js"></script>
+    <script src="p5.collide2d.js"></script>
   
 
 </body></html>
